<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PMINDIA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="enter_birthday">Enter your birthday</string>
    <string name="choose_birthday_edittext_hint">Choose birthday</string>
    <string name="enter_anniversary">Enter your anniversary</string>
    <string name="choose_anniversary_edittext_hint">Choose anniversary</string>
    <string name="accessibility_play">Play</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_prev">Close</string>
    <string name="duration_format"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="action_help">Help</string>
    <string name="search_hint">Search</string>
    <string name="login_with_mygov">Login with MyGov</string>
    <string name="daydream_pmo_images_label">PMO Images</string>
    <string name="daydream_pmo_news_label">PMO News</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="facebook_app_id">141998196152009</string>
    <string name="login_facebook">Login to Facebook</string>
    <string name="login_twitter">Login to Twitter</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_quotes">Quotes</string>
    <string name="drawer_item_gallery">Image Gallery</string>
    <string name="drawer_item_formerpms">Former Prime Ministers</string>
    <string name="drawer_item_aboutpm">Know the PM</string>
    <string name="drawer_item_mkb">Mann ki baat</string>
    <string name="drawer_category_more">More info</string>
    <string name="drawer_item_donatepm">Donate to PMNRF</string>
    <string name="drawer_item_interactpm">Interact with PM</string>
    <string name="drawer_item_privacy_policy">Privacy Policy</string>
    <string name="functional_chart">List of Officers</string>
    <string name="tabs_latest_news">Latest News</string>
    <string name="tabs_media_coverage">Media Coverage</string>
    <string name="tabs_social_feed">Social Feed</string>
    <string name="tabs_mankibaat">Mann ki baat</string>
    <string name="tabs_notification">Notifications</string>
    <string name="know_the_pm">Know the PM</string>
    <string name="former_pms">Former PMs</string>
    <string name="list_of_officers">List of Officers</string>
    <string name="gallery">Gallery</string>
    <string name="dialog_setting_wallpaer">Setting wallpaper</string>
    <string name="dialog_saving_to_device">Saving to device</string>
    <string name="error_setting_wallpaer">Error occurred while setting wallpaper</string>
    <string name="error_save_image">Unable to save image to device</string>
    <string name="set_wallpaper_success">Wallpaper successfully set</string>
    <string name="save_image_success">Image successfully saved to device</string>
    <string name="man_ki_baat">Mann Ki Baat</string>
    <string name="mkb_audio">Audio</string>
    <string name="mkb_video">Video</string>
    <string name="news">News</string>
    <string name="quotes">Quotes</string>
    <string name="settings">Settings</string>
    <string name="voice_out">Voice-Out</string>
    <string name="functional_chart_number">"Number : "</string>
    <string name="view_on_twitter">View on twitter</string>
    <string name="watch_video">Watch video</string>
    <string name="connecting_with">"Connecting with "</string>
    <string name="some_error_occurred">An error occurred.</string>
    <string name="verifying">Verifying...</string>
    <string name="twitter_login_success">Successfully Logged In to Twitter</string>
    <string name="log_in_success">Successfully logged in</string>
    <string name="logged_in_as">"Logged in as "</string>
    <string name="login_to_twitter">Login to Twitter</string>
    <string name="account_not_authorized_twitter">Account not authorized. Login to Twitter to quickly tweet the feeds from PMO</string>
    <string name="account_not_authorized_facebook">Account not authorized. Login to Facebook to quickly share posts to your timeline.</string>
    <string name="login_to_facebook">Login to Facebook</string>
    <string name="logout_from_facebook">Logout from Facebook</string>
    <string name="dialog_logging_out_facebook">Logging out from facebook</string>
    <string name="logged_out_from_twitter">Logged out from twitter</string>
    <string name="logged_out_from_facebook">Logged out from facebook</string>
    <string name="logout_from_twitter">Logout from Twitter</string>
    <string name="unable_get_account_details">Unable to get current account details</string>
    <string name="hint_search">Search</string>
    <string name="sharing_to_twitter">Sharing to Twitter</string>
    <string name="shared_to_twitter">Shared to Twitter</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">Youtube</string>
    <string name="menu_filter">Filter</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="general">General</string>
    <string name="background_cache">Background Cache</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="daydream">Daydream</string>
    <string name="language_summary">Choose the default language.</string>
    <string name="theme_summary">Choose the look of the app. The app will restart automatically before changes take place.</string>
    <string name="daydream_summary">Choose the PMO Images or PMO News screensaver in your phone\'s Daydream settings.</string>
    <string name="accounts">Accounts</string>
    <string name="account_mygov">MyGov</string>
    <string name="manage_voiceout_title">Manage voice out preferences.</string>
    <string name="other">Other</string>
    <string name="clear_image_cache">Clear image data</string>
    <string name="clear_image_cache_summary">Clear all saved images and free up some storage.</string>
    <string name="clear_all_cache">Clear all data</string>
    <string name="clear_all_cache_summary">Clear all saved app data and free up some storage.</string>
    <string name="login_to_mygov">Login to MyGov account.</string>
    <string name="tweets">Tweets</string>
    <string name="media">Media</string>
    <string name="app_results">App Results</string>
    <string name="voice_out_description">Voice Out lets you quickly share content to your social accounts in just a single click. You can manage the accounts below. Voice out requires authorization on behalf of you to post on social network. You can revoke these autorizations at any time.</string>
    <string name="skip">Skip</string>
    <string name="sharing_share_dialog">Sharing...</string>
    <string name="voice_out_button">Voice Out - Share to all platforms</string>
    <string name="facebook">Facebook</string>
    <string name="gogoleplus">Google+</string>
    <string name="share">Share</string>
    <string name="read_more">Read more</string>
    <string name="loading">Loading..</string>
    <string name="image_cache_cleared">Image cache cleared</string>
    <string name="all_cache_cleared">All cache cleared</string>
    <string name="trivia_and_facts">Trivia and Facts</string>
    <string name="track_record">Track Record</string>
    <string name="track_record_menu">Governance Track Record</string>
    <string name="listen_tts">Listen (TTS)</string>
    <string name="font_size">Font Size</string>
    <string name="speech_rate">Speech rate</string>
    <string name="pitch_tts">Pitch</string>
    <string name="cancel">Cancel</string>
    <string name="listen_tts_dialog">Listen - Text To Speech</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="save_to_device">Save to device</string>
    <string name="post_will_be_shared_to">"Post will be shared to - "</string>
    <string name="no_accounts_autorized">"No accounts authorized. "</string>
    <string name="voice_out_description_dialog_no_accounts">Voice Out lets you quickly share content to your social accounts in just a single click. You can manage the accounts by clicking below.</string>
    <string name="sharing_to_facebook">Sharing to Facebook</string>
    <string name="shared_to_facebook">Shared to Facebook</string>
    <string name="and">" and "</string>
    <string name="no_notification_text">You don’t have any notifications yet.\nWhen you get notifications from the PMO, you will be able to see them here.</string>
    <string name="donate_to_ndf">Donate to NDF</string>
    <string name="events">Events</string>
    <string name="add_to_calender">Add to my calendar</string>
    <string name="facts_trivia">Facts and Trivia</string>
    <string name="title_profile">Profile</string>
    <string name="fetching_profile">Fetching profile...</string>
    <string name="error_fetching_profile">Error while fetching profile</string>
    <string name="error_logging_in">Error while logging in</string>
    <string name="skip_setup_message">Are you sure you want to skip the profile setup? \n</string>
    <string name="skip_setup_message2">You can update your profile anytime in the profile section of the app</string>
    <string name="gps_disabled_message">Your GPS seems to be disabled. Please enable your GPS.</string>
    <string name="enable">Enable</string>
    <string name="getting_location">Getting location...</string>
    <string name="permission_location_message">Access to fine location is required to access device GPS for fetching location.</string>
    <string name="ok">OK</string>
    <string name="location_fetched">Location successfully fetched.</string>
    <string name="updating_profile">Updating profile...</string>
    <string name="logout_mygov">Logout from MyGov</string>
    <string name="success_logout_mygov">Successfully logged out from MyGov</string>
    <string name="location_profile_push">Location based push notifications</string>
    <string name="location_profile_push_summary">If we should use your location to send location based push notifications.</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_profile_summary">Update/Add your date of birth, date of anniversary.</string>
    <string name="use_location">Should we use your location to send you location based notifications?</string>
    <string name="use_location_detail">Your location will be updated every 5 days using GPS, and only when the app is running. You can disable location based notifications at any time in the profile section of the app.</string>
    <string name="use_location_button">Yes, use my location</string>
    <string name="infographics">Infographics</string>
    <string name="notifications">Notifications</string>
    <string name="_0_comments">0 comments</string>
    <string name="download">Download</string>
    <string name="create_new_account">Create New account</string>
    <string name="full_name">Full Name *</string>
    <string name="email_address">Email Address</string>
    <string name="mobile">Mobile *</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="otp_has_been_sent_to_your_email_mobile">OTP has been sent to your Email/mobile.</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="resend_otp">Resend OTP</string>
</resources>