<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_large"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/emblem"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_above="@+id/linear_login"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/ic_circle"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:src="@drawable/splash" />


            <LinearLayout
                android:id="@+id/linear_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="vertical"
                android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"

                    android:paddingTop="10dp">

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:minLines="1"
                        android:textColor="@color/black_grey" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal">

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_address"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:minLines="1"
                        android:textColor="@color/black_grey" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/countryspinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/black_grey" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_normal">

                    <EditText
                        android:id="@+id/edt_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:minLines="1"
                        android:textColor="@color/black_grey" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="0dp"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/radio_other"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/other" />

                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/black_grey" />

                <TextView
                    android:id="@+id/tv_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/background_light"
                    android:gravity="left|center"
                    android:onClick="onDateSelect"
                    android:paddingTop="@dimen/padding_normal"
                    android:paddingBottom="@dimen/padding_normal"
                    android:text="@string/date_of_birth"
                    android:textAllCaps="false" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/black_grey" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:background="@color/colorPrimary"
                    android:onClick="onRegister"
                    android:text="@string/create_new_account"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/opt_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_large"
            android:visibility="gone">


            <com.sanskrit.pmo.Utils.TypefaceTextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/padding_normal"
                android:gravity="center"
                android:text="@string/otp_has_been_sent_to_your_email_mobile"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:paddingTop="10dp">

                    <EditText
                        android:id="@+id/edt_opt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_otp"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:minLines="1"
                        android:textColor="@color/black_grey" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btn_submitotp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:background="@color/colorPrimary"
                    android:onClick="onSubmitOTP"
                    android:text="@string/submit_otp"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_resend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:background="@android:color/transparent"
                    android:onClick="onResenOPT"
                    android:text="@string/resend_otp"
                    android:textAllCaps="false"
                    android:textColor="@color/black_grey"
                    android:visibility="gone" />

            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>
</ScrollView>